# byte-size-black-history

./: .gitignore  Dockerfile  README.md  api.py  db.py  dev-requirements.txt  get_emails.py  improvements.md  link_parser.py  models.py  pyproject.toml  requirements.txt  send_daily_email.py  tasks.py  tests.py  update-cron  utils.py  wiki_links.txt
src/api/: db.py  main.py  models.py
src/templates/: confirmation.html  landing_page.html
src/utils/: get_emails.py  link_parser.py  send_daily_email.py  tasks.py
templates/: confirmation.html  donate.html  landing_page.html
