[tool.poetry]
authors = [""]
description = ""
name = "byte-size-black-history"
version = "0.1.0"

[tool.poetry.dependencies]
arrow = "0.17.0"
fastapi = "0.61.1"
jinja2 = "2.11.3"
psycopg2 = "2.8.6"
python = "3.8.*"
python-multipart = "0.0.5"
requests = "2.31.0"
sqlalchemy = "1.3.20"
sqlalchemy-utils = "0.36.8"
uvicorn = "0.12.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.6.4"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
